<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_draw_menu_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_theme"
        android:orientation="vertical"
        android:paddingTop="@dimen/status_bar_height">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/app_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/secondary_text_dark"
                    android:text="@string/version_number"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#adceff"
        android:padding="16dp"
        android:text="@string/add_new_account" />

    <ListView
        android:id="@+id/listViewAccounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1px"
        android:scrollbars="none" />
</LinearLayout>
